--- a/css/adminstyle.css
+++ b/css/adminstyle.css
@@ -214,7 +214,7 @@ padding:0;
 }
 .logintitle {
 background:#61acc5;
-font-size:30px;
+font-size:22px;
 text-align:center;
 font-weight:normal;
 padding:3px 0 4px;
@@ -603,7 +603,7 @@ input[type="text"] {border:1px solid #cccccc; padding:6px;}
     width: 10px;
 }
 .header a.logo {line-height:0; padding:0; margin-top:4px; float: left;}
-.subtitle {color: #0e607a; font-weight: bold; font-size: 15px; margin:10px 0;}
+.subtitle {color: #0e607a; font-weight: bold; font-size: 15px; padding:10px 0;}
 
 .margin10_B {margin-bottom: 10px;}
 
@@ -718,3 +718,19 @@ font-weight: bold; margin:0;
 /*added for user edit 155-05-2014*/
 .margin5_T {margin-top:5px;}
 .margin10_L {margin-left:10px;}
+
+/* added for safari related issues*/
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+
+.strong {
+font-weight:normal;
+-bracket-:hack[;
+font-weight:bold;
+];}
+
+strong, th {font-weight:normal; 
+-bracket-:hack[;
+font-weight:bold;
+];}
+
+}
