--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /*lycos css*/
 * {padding:0; margin:0; outline: none;}
 
-
+html {height:100%;}
 #wrap{}
 
 a {text-decoration: none;}
@@ -30,6 +30,8 @@ border-radius: 5px;
 font-weight: bold;
 font-family: 'Source Sans Pro', sans-serif;
 font-size:13px;
+min-width: 150px;
+display: inline-block;
 }
 .gap {height:80px;}
 .contentarea {margin:0;}
@@ -245,7 +247,22 @@ font-weight:normal;
 }
 
 .urlrow {height:45px; position: relative;}
-.shorten-btn {position:absolute; right:0; top:0;}
+
+
+
 
 img {border:0; line-height: 0;}
 
+.home {background:url(../images/bg.jpg) repeat-x 0 bottom;}
+
+.shorten-table {margin:0 auto; width:80%;}
+.fullwidth {width:96%;}
+
+
+.shorten-table .strong {
+display: inline-block;
+font-weight: bold;
+margin-top: 5px;
+}
+
+.recaptcha_only_if_privacy {display: none;}
