--- a/css/tablesorter.css
+++ b/css/tablesorter.css
@@ -248,7 +248,7 @@ input[type="button"], input[type="submit"] {border-bottom:1px solid #7096a9; bac
 .signup form {margin:10px auto; width:65%;}
 
 .signup td {padding:5px 3px; font-size: 14px;}
-.add {background-color: #000; padding:10px 0; width:100%; line-height:0; position:fixed; bottom:38px; left: 0; text-align: center;}
+.add {text-align:center; background:#000; height:92px; padding:10px 0; width:100%; line-height:0; position:fixed; bottom:38px;}
 input[type="reset"],input[type="button"], input[type="submit"] {border-bottom:1px solid #7096a9; background:#343637; box-shadow:none; cursor:pointer; min-width: 80px; 
 	cursor:pointer;
 	border:1px solid #1e4456; color:#fff; padding:6px;
