--- a/css/tablesorter.css
+++ b/css/tablesorter.css
@@ -245,10 +245,10 @@ input[type="button"], input[type="submit"] {border-bottom:1px solid #7096a9; bac
 .error_message {color:red; font-size: 13px;}
 
 .signup {padding-bottom:150px;padding-top: 10px;}
-.signup form {margin:10px auto; width:65%;}
+.signup form {margin:10px auto; width:42%;}
 
 .signup td {padding:5px 3px; font-size: 14px;}
-.add {text-align:center; background:#000; height:92px; padding:10px 0; width:100%; line-height:0; position:fixed; bottom:38px;}
+.add {background-color: #000; padding:10px 0; width:100%; line-height:0; position:fixed; bottom:38px; left: 0; text-align: center;}
 input[type="reset"],input[type="button"], input[type="submit"] {border-bottom:1px solid #7096a9; background:#343637; box-shadow:none; cursor:pointer; min-width: 80px; 
 	cursor:pointer;
 	border:1px solid #1e4456; color:#fff; padding:6px;
@@ -297,12 +297,13 @@ margin-bottom:10px;
 	text-align: center;
 }
 .width50 {width: 50%;}
+.width97 {width:97%;}
 
 .center {
     text-align: center;
 }
 
-.userside form {width: 50%;}
+.userside form {width:40%;}
 
 .tablecell {display:table-cell; position: relative;}
 .close-btn {
