--- a/css/tablesorter.css
+++ b/css/tablesorter.css
@@ -298,6 +298,7 @@ margin-bottom:10px;
 }
 .width50 {width: 50%;}
 .width97 {width:97%;}
+.width96 {width: 96%;}
 
 .center {
     text-align: center;
