--- a/css/adminstyle.css
+++ b/css/adminstyle.css
@@ -11,6 +11,8 @@ height:100%;
 
 body, html, .contentarea, .ltpannel{ height: 100%;}
 
+img {border:0;}
+
 .login #wrap {
 background:none;
 border:none;
