--- a/css/adminstyle.css
+++ b/css/adminstyle.css
@@ -460,7 +460,7 @@ padding-bottom: 50px;
 /*lycos css*/
 * {padding:0; margin:0;}
 a {text-decoration: none;}
-body {padding:0; margin:0; font-family: 'Source Sans Pro', sans-serif; font-size:13px;}
+body {padding:0; margin:0; font-family: 'Source Sans Pro', sans-serif;}
 
 .success, .warning {margin: 20px 0;}
 
@@ -760,3 +760,30 @@ font-weight:bold;
 
 /*added for showing error message*/
 .required {border:1px solid #FF0000 !important;}
+
+
+
+@media screen and (max-width:1024px){
+
+body {font-size:12px;}
+
+.logintitle {font-size:18px;}
+
+input[type="reset"], input[type="button"], 
+input[type="submit"] {min-width:60px;}
+
+#login .text {padding:6px;}
+p, td {font-size:12px;}
+
+table.tblSorter tbody td {padding:3px;}
+
+table.tblSorter tbody td.btnstd {vertical-align: middle;}
+#login p {
+font-weight:normal;
+margin-bottom: 5px;
+}
+
+
+}
+
+
